--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
       <div id="sec" class="dn subsect hf r">
         <div class="nodrag ca pr4-l hf-l oya-l">
           <h2 id="sectorTitle" class="mb0 f4 lht">Sector</h2>
-          <p class="mb3 f6 o7">Updated <span id="sectorLastUpdate"></span></p>
+          <p id="sectorLastUpdate" class="mb3 f6 o7"></p>
 
-          <div id="sectorChart" class="vh3 mb4"></div>
+          <div id="sectorChart" class="vh2 mb4"></div>
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
@@ -255,21 +255,25 @@
               <p class="f3 fwb"><span id="secASD">0.00</span> h</p>
               <p class="f6 o9">Avg Session</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="secLPH">0.00</span>%</p>
               <p class="f6 o9">Log Percentage</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="secPHH">0:00</span></p>
               <p class="f6 o9">Peak Hour</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="secPDH">0.00</span></p>
               <p class="f6 o9">Peak Day</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="secStreak">0</span> d</p>
               <p class="f6 o9">Streak</p>
+            </li>
+            <li class="mb4 mb0-l c6 c3-m c3-l">
+              <p class="f3 fwb"><span id="secEnt">0</span></p>
+              <p class="f6 o9">Entries</p>
             </li>
           </ul>
 
@@ -290,9 +294,9 @@
       <div id="pro" class="dn subsect hf r">
         <div class="nodrag ca pr4-l hf-l oya-l">
           <h2 id="projectTitle" class="mb0 f4 lht">Project</h2>
-          <p class="mb3 f6 o7">Updated <span id="projectLastUpdate"></span></p>
+          <p id="projectLastUpdate" class="mb3 f6 o7"></p>
 
-          <div id="projectChart" class="vh3 mb4"></div>
+          <div id="projectChart" class="vh2 mb4"></div>
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
@@ -311,21 +315,25 @@
               <p class="f3 fwb"><span id="proASD">0.00</span> h</p>
               <p class="f6 o9">Avg Session</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="proLPH">0.00</span>%</p>
               <p class="f6 o9">Log Percentage</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="proPHH">0:00</span></p>
               <p class="f6 o9">Peak Hour</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="proPDH">0.00</span></p>
               <p class="f6 o9">Peak Day</p>
             </li>
-            <li class="mb4 mb0-l c6 c3-m c3-l">
+            <li class="mb4 c6 c3-m c3-l">
               <p class="f3 fwb"><span id="proStreak">0</span> d</p>
               <p class="f6 o9">Streak</p>
+            </li>
+            <li class="mb4 mb0-l c6 c3-m c3-l">
+              <p class="f3 fwb"><span id="proEnt">0</span></p>
+              <p class="f6 o9">Entries</p>
             </li>
           </ul>
 
