Add window notifications on log start

--- a/index.html
+++ b/index.html
@@ -538,6 +538,7 @@
   <script>
     const {dialog,app} = require('electron').remote
     const fs = require('fs')
+    const ipcRenderer = require('electron').ipcRenderer
     Log.init()
   </script>
 
