Add LH forecast

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           <span class="nodrag mr2 o9 tk" title="Peak Time">PT</span>
           <span id="fpt">00:00</span>
         </p>
+        <p class="mb1 c3 c3-m cc-l">
+          <span class="nodrag mr2 o9 tk" title="Logged Hours">LH</span>
+          <span id="flh">0.00 h</span>
+        </p>
         <p class="c3 c3-m cc-l">
           <span class="nodrag mr2 o9 tk" title="Session Duration">SD</span>
           <span id="fsd">0.00 h</span>
