--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
   <script src="utils/monocal.min.js"></script>
   <script src="utils/desamber.js"></script>
 </head>
-<body id="app" class="noselect r p4 p5-m p5-l hf cn">
+<body id="app" class="noselect r p4 p5-m p5-l hf cn c-d">
 
   <header class="mb4 f6 lhc">
-    <h1 class="dib mr4 f5 upc tk">Log</h1>
+    <h1 class="dib mr4 f5 upc tk">Log 1.0.2</h1>
 
     <button id="b-ovw" class="pv1 tab on bg-cl of mr3" onclick="Log.tab('ovw', 'sect', 'tab')">Overview</button>
     <button id="b-lis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('lis', 'sect', 'tab')">Details</button>
     <button id="b-vis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('vis', 'sect', 'tab')">Visualisation</button>
     <button id="b-tab" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('tab', 'sect', 'tab')">Entries</button>
-    <button id="b-set" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('set', 'sect', 'tab')">Guide</button>
+    <button id="b-jou" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('jou', 'sect', 'tab')">Journal</button>
+    <button id="b-gui" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('gui', 'sect', 'tab')">Guide</button>
 
     <span id="timer" class="rf f5 dn di-m di-l" title="Current Log Session Duration">00:00:00</span>
   </header>
@@ -29,30 +30,30 @@
     <div class="c2 mb4">
       <h3 class="mb4 f6 fwn">Peaks</h3>
 
-      <div id="phc" class="mb4 sh5 wf" title="Peak Hours"></div>
-      <div id="pdc" class="mb4 sh5 wf" title="Peak Days"></div>
+      <div id="phc" class="mb4 sh5 wf"></div>
+      <div id="pdc" class="mb4 sh5 wf"></div>
 
       <h3 class="mb3 f6 fwn">Forecast</h3>
 
       <div class="f6 r">
         <p class="mb1 c3 c3-m cc-l">
-          <span class="nodrag mr2 o9 tk" title="Sector Focus">SF</span>
+          <span class="mr2 o9 tk">SF</span>
           <span id="fsf">&mdash;</span>
         </p>
         <p class="mb1 c3 c3-m cc-l">
-          <span class="nodrag mr2 o9 tk" title="Project Focus">PF</span>
+          <span class="mr2 o9 tk">PF</span>
           <span id="fpf">&mdash;</span>
         </p>
         <p class="mb1 c3 c3-m cc-l">
-          <span class="nodrag mr2 o9 tk" title="Peak Time">PT</span>
+          <span class="mr2 o9 tk">PT</span>
           <span id="fpt">00:00</span>
         </p>
         <p class="mb1 c3 c3-m cc-l">
-          <span class="nodrag mr2 o9 tk" title="Logged Hours">LH</span>
+          <span class="mr2 o9 tk">LH</span>
           <span id="flh">0.00 h</span>
         </p>
         <p class="c3 c3-m cc-l">
-          <span class="nodrag mr2 o9 tk" title="Session Duration">SD</span>
+          <span class="mr2 o9 tk">SD</span>
           <span id="fsd">0.00 h</span>
         </p>
       </div>
@@ -87,7 +88,7 @@
           <div class="psa sh1 br o5" style="left:95.83%"></div>
         </div>
 
-        <div id="dayChart" class="mb3 psr wf sh2" title="Today's Timeline"></div>
+        <div id="dayChart" class="mb3 psr wf sh2"></div>
       </div>
 
       <div id="weekChart" class="nodrag h4 mb4"></div>
@@ -114,11 +115,11 @@
           <p class="f6 o9">Log Percentage</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p class="f3 fwb"><span id="focusToday">0.00</span></p>
+          <p id="focusToday" class="f3 fwb">0.00</p>
           <p class="f6 o9">Focus</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p class="f3 fwb"><span id="entryCount">0</span></p>
+          <p id="entryCount" class="f3 fwb">0</p>
           <p class="f6 o9">Entries</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
@@ -129,9 +130,9 @@
     </div>
     <div class="c2 hf-l">
       <h3 class="mb3 f6 fwn">Sectors</h3>
-      <ul id="sectorBars" class="nodrag lsn mb3 h4-l oya-l"></ul>
+      <ul id="sectorBars" class="nodrag lsn f6 lhc mb4 h4-l oya-l"></ul>
       <h3 class="mb3 f6 fwn">Projects</h3>
-      <ul id="projectBars" class="nodrag lsn h4-l oya-l"></ul>
+      <ul id="projectBars" class="nodrag lsn f6 lhc h4-l oya-l"></ul>
     </div>
   </div>
 
@@ -145,7 +146,7 @@
     <div class="cb pl4-l hf-l">
       <div id="sum" class="subsect hf r">
         <div class="nodrag hf pr4-l oya-l">
-          <h3 class="mb4 f6 fwn">Statistics</h3>
+          <!-- <h3 class="mb4 f5 fwn">Statistics</h3> -->
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
@@ -173,23 +174,23 @@
               <p class="f6 o9">Log Percentage</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="entCount">0</span></p>
+              <p id="entCount" class="f3 fwb">0</p>
               <p class="f6 o9">Entries</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="secCount">0</span></p>
+              <p id="secCount" class="f3 fwb">0</p>
               <p class="f6 o9">Sectors</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="proCount">0</span></p>
+              <p id="proCount" class="f3 fwb">0</p>
               <p class="f6 o9">Projects</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="PHH">0:00</span></p>
+              <p id="PHH" class="f3 fwb">0:00</p>
               <p class="f6 o9">Peak Hour</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p class="f3 fwb"><span id="PDH">0.00</span></p>
+              <p id="PDH" class="f3 fwb">0.00</p>
               <p class="f6 o9">Peak Day</p>
             </li>
           </ul>
@@ -233,7 +234,7 @@
           <h2 id="sectorTitle" class="mb0 f4 lht">Sector</h2>
           <p id="sectorLastUpdate" class="mb3 f6 o7"></p>
 
-          <div id="sectorChart" class="vh2 mb4"></div>
+          <div id="sectorChart" class="h4 mb4"></div>
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
@@ -279,7 +280,7 @@
           <div id="secPeakDays" class="dib mb4 pl3-l lf h2 w5"></div>
 
           <h3 class="mb4 f6 fwn">Focus</h3>
-          <div id="secFocusChart" class="mb4 wf sh5"></div>
+          <div id="secFocusChart" class="mb4 wf h1"></div>
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 mb0-l c6 c3-m c3-l">
@@ -306,7 +307,7 @@
           <ul id="projectLegend" class="lsn r"></ul>
         </div>
         <div class="c2 hf-l">
-          <ul id="sectorsList" class="nodrag lsn hf-l oya-l"></ul>
+          <ul id="sectorsList" class="nodrag lsn f6 lhc hf-l oya-l"></ul>
         </div>
       </div>
 
@@ -315,7 +316,7 @@
           <h2 id="projectTitle" class="mb0 f4 lht">Project</h2>
           <p id="projectLastUpdate" class="mb3 f6 o7"></p>
 
-          <div id="projectChart" class="vh2 mb4"></div>
+          <div id="projectChart" class="h4 mb4"></div>
 
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
@@ -361,7 +362,7 @@
           <div id="proPeakDays" class="dib mb4 pl3-l lf h2 w5"></div>
 
           <h3 class="mb4 f6 fwn">Focus</h3>
-          <div id="proFocusChart" class="mb4 wf sh5 bb"></div>
+          <div id="proFocusChart" class="mb4 wf h1"></div>
           <ul class="mb4 lsn f6 lhc r">
             <li class="mb4 mb0-l c6 c3-m c3-l">
               <p class="f3 fwb"><span id="proAFH">0.00</span></p>
@@ -386,7 +387,7 @@
           <ul id="sectorLegend" class="mb4 lsn r"></ul>
         </div>
         <div class="c2 hf-l">
-          <ul id="projectsList" class="nodrag lsn hf-l oya-l"></ul>
+          <ul id="projectsList" class="nodrag lsn f6 lhc hf-l oya-l"></ul>
         </div>
       </div>
     </div>
@@ -395,7 +396,7 @@
   <div id="vis" class="nodrag dn sect h9 oya"></div>
 
   <div id="tab" class="dn sect wf h9 oya">
-    <table class="nodrag bn wf">
+    <table class="wf bn">
       <thead>
         <tr class="f6 al">
           <th>ID</th>
@@ -408,35 +409,121 @@
           <th>Activity</th>
         </tr>
       </thead>
-      <tbody id="logbook" class="f6"></tbody>
+      <tbody id="logbook" class="nodrag f6"></tbody>
     </table>
   </div>
 
-  <div id="set" class="dn sect wf r h9-l f6 lhc oya">
+  <div id="jou" class="dn sect wf h9 oya">
+    <div class="nodrag c1 hf-l oya-l">
+      <ul id="journalNav" class="lsn f6 lhc"></ul>
+    </div>
+
+    <div class="nodrag cb pl2-l hf-l oya-l">
+      <h2 id="journalDate" class="mb4 f5">Journal</h2>
+
+      <div class="mb4 ph1">
+        <div class="mb3 psr wf sh2 bl br">
+          <div class="psa sh1 br o5" style="left:4.17%"></div>
+          <div class="psa hf br o7" style="left:8.33%"></div>
+          <div class="psa sh1 br o5" style="left:12.5%"></div>
+          <div class="psa hf br o7" style="left:16.67%"></div>
+          <div class="psa sh1 br o5" style="left:20.83%"></div>
+          <div class="psa hf br o7" style="left:25%"></div>
+          <div class="psa sh1 br o5" style="left:29.17%"></div>
+          <div class="psa hf br o7" style="left:33.33%"></div>
+          <div class="psa sh1 br o5" style="left:37.5%"></div>
+          <div class="psa hf br o7" style="left:41.67%"></div>
+          <div class="psa sh1 br o5" style="left:45.83%"></div>
+          <div class="psa hf br o7" style="left:50%"></div>
+          <div class="psa sh1 br o5" style="left:54.17%"></div>
+          <div class="psa hf br o7" style="left:58.33%"></div>
+          <div class="psa sh1 br o5" style="left:62.5%"></div>
+          <div class="psa hf br o7" style="left:66.67%"></div>
+          <div class="psa sh1 br o5" style="left:70.83%"></div>
+          <div class="psa hf br o7" style="left:75%"></div>
+          <div class="psa sh1 br o5" style="left:79.17%"></div>
+          <div class="psa hf br o7" style="left:83.33%"></div>
+          <div class="psa sh1 br o5" style="left:87.5%"></div>
+          <div class="psa hf br o7" style="left:91.67%"></div>
+          <div class="psa sh1 br o5" style="left:95.83%"></div>
+        </div>
+
+        <div id="journalDay" class="mb3 psr wf sh2"></div>
+      </div>
+
+      <div class="r h7">
+
+        <div class="c8 pr4-l hf oya">
+          <ul id="morningEntries" class="mb3 lsn"></ul>
+          <ul id="afternoonEntries" class="mb3 lsn"></ul>
+          <ul id="eveningEntries" class="lsn"></ul>
+        </div>
+
+        <div class="c4">
+          <ul class="lsn f6 lhc r">
+            <li class="mb4 c6">
+              <p class="f3 fwb"><span id="jLHT">0.00</span> h</p>
+              <p class="f6 o9">Logged Hours</p>
+            </li>
+            <li class="mb4 c6">
+              <p class="f3 fwb"><span id="jLSN">0.00</span> h</p>
+              <p class="f6 o9">Min Session</p>
+            </li>
+            <li class="mb4 c6">
+              <p class="f3 fwb"><span id="jLSX">0.00</span> h</p>
+              <p class="f6 o9">Max Session</p>
+            </li>
+            <li class="mb4 c6">
+              <p class="f3 fwb"><span id="jASDT">0.00</span> h</p>
+              <p class="f6 o9">Avg Session</p>
+            </li>
+            <li class="mb4 mb0-l c6">
+              <p class="f3 fwb"><span id="jLPT">0.00</span>%</p>
+              <p class="f6 o9">Log Percentage</p>
+            </li>
+            <li class="mb4 mb0-l c6">
+              <p id="jfocusToday" class="f3 fwb">0.00</p>
+              <p class="f6 o9">Focus</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="gui" class="dn sect wf r h9-l f6 lhc oya">
     <div class="nodrag mb5 mb0-l c6 pr4-l hf-l oya-l">
       <h2 class="mb3 f5">Guide</h2>
 
-      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity; when you feel like stopping, simply end the log.</p>
+      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity and end the log whenever you feel like stopping.</p>
 
       <h3 class="mb3 f5">Console</h3>
       <p class="mb4 m">Use the console to enter commands. The console is summoned when you start typing. Here are a list of available commands:</p>
 
-      <p class="mb3 m">To start a log, you may do so in several ways:</p>
+      <p class="mb3 m">To start a log, you may do so in a few different ways. Choose the one you find convenient:</p>
       <div class="mb4 bl pl3 m">
-        <p class="mb2">start "Sector" "Title" "A description"</p>
-        <p class="mb2">start Sector, Title, Description</p>
-        <p class="mb2">start Sector; Title; Description</p>
+        <p class="mb2">start "Sector" "Project" "A description"</p>
+        <p class="mb2">start Sector, Project, A description</p>
+        <p class="mb2">start Sector; Project; A description</p>
         <p>start Sector | Title | Description</p>
       </div>
+
+      <p class="mb4 m">A <b>Sector</b> defines an activity type. A <b>Project</b> can involve one or more Sectors. For example, let's say you're working on an app project. This project may involve Design, Code, and Research sectors.</p>
 
       <p class="mb3 m">To end a log:</p>
       <div class="mb4 bl pl3 m">
         <p>end</p>
       </div>
 
-      <p class="mb3 m">To edit a log entry, use the entry's log entry ID (shown in the Entries table):</p>
+      <p class="mb3 m">If you want to take a break, temporarily end a log, and resume later:</p>
       <div class="mb4 bl pl3 m">
-        <p class="mb2">edit 12 sector "Code"</p>
+        <p>pause <span class="o8">// ends your log session</span></p>
+        <p>resume <span class="o8">// resumes the last log session</span></p>
+      </div>
+
+      <p class="mb3 m">To edit an entry, use its ID (shown in Entries):</p>
+      <div class="mb4 bl pl3 m">
+        <p class="mb2">edit 12 sector "Code" <span class="o8">// edits entry #12</span></p>
         <p class="mb2">edit 25 project "Fishing"</p>
         <p class="mb2">edit 3 description "Chasing dragon"</p>
         <p class="mb2">edit 24 start "YYYY MM DD HH MM SS"</p>
@@ -444,30 +531,35 @@
         <p>edit 5 end "2018 10 9 12 15 0"</p>
       </div>
 
-      <p class="mb3 m">To delete a log entry:</p>
+      <p class="mb3 m">To delete an entry, use its ID:</p>
       <div class="mb4 bl pl3 m">
-        <p>delete 15 <span class="o8">// deletes log entry 15</span></p>
+        <p>delete 15 <span class="o8">// deletes entry #15</span></p>
       </div>
 
-      <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
+      <p class="mb3 m">To change the interface's background colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set background #aabbcc</p>
         <p>set background aquamarine</p>
       </div>
 
-      <p class="mb3 m">To change the interface's text colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
+      <p class="mb3 m">To change the interface's text colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set color #112233</p>
         <p>set color black</p>
       </div>
 
-      <p class="mb3 m">To change the interface's accent colour, set a hexadecimal colour of your choice. HTML colour names are also accepted:</p>
+      <p class="mb3 m">To change the interface's accent colour, set a hexadecimal colour or an HTML colour name of your choice:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set accent #ac1d1c</p>
         <p>set accent red</p>
       </div>
 
-      <p class="mb3 m">To set your sectors' and projects' colour codes (for instance, if you would like entries under "Fishing" to appear green in charts):</p>
+      <p class="mb3 m">To switch the interface's background and text colours:</p>
+      <div class="mb4 bl pl3 m">
+        <p>invert</p>
+      </div>
+
+      <p class="mb3 m">To set your sectors' and projects' colour codes (used in charts):</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set sector "Fishing" green</p>
         <p>set project "Top Secret Project" #c0ffee</p>
@@ -479,15 +571,16 @@
         <p>set colourmode project</p>
       </div>
 
-      <p class="mb3 m">To change the number of log days displayed in the charts:</p>
+      <p class="mb3 m">To change the number of days displayed in the charts:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set view 30 <span class="o8">// shows only the last 30 days</span></p>
         <p>set view 7 <span class="o8">// shows only the last 7 days</span></p>
       </div>
 
-      <p class="mb3 m">To change the calendar system used, choose between the Gregorian, MONOCAL, or Aequirys calendars. This does not affect your logs. It simply shows dates differently:</p>
+      <p class="mb3 m">To change the calendar system used, choose between the Gregorian, Desamber, MONOCAL, or Aequirys calendars. This does not affect your logs. It simply shows dates differently:</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">set calendar gregorian</p>
+        <p class="mb2">set calendar desamber</p>
         <p class="mb2">set calendar monocal</p>
         <p>set calendar aequirys</p>
       </div>
@@ -504,13 +597,13 @@
       </div>
 
       <p class="mb3 m">To export your data:</p>
-      <div class="mb5 bl pl3 m">
+      <div class="bl pl3 m">
         <p>export</p>
       </div>
 
     </div>
     <div class="nodrag mb5 mb0-l c6 pl4-l hf-l oya-l">
-      <h2 class="mb3 f5">Log v1.0.1</h2>
+      <h2 class="mb3 f5">Log</h2>
       <p class="mb4 m">Log is a log and time-tracking system. Its primary purpose is to provide insight to how one's time is spent to optimise personal productivity and better manage time.</p>
 
       <h3 class="mb3 f5">Contribution</h3>
@@ -521,7 +614,7 @@
       <p class="bl pl3 mb4 m">Twitter: @joshavanier</p>
 
       <p class="mb3">Thank you for taking the time to try this out.</p>
-      <p class="mb5">&mdash; Josh</p>
+      <p>&mdash; Josh</p>
     </div>
   </div>
 
