Improve index.html grammar of command instructions
Per changes to 'js/console.js': Swap 'end' for 'stop' as it is the
correct accompanying antonym for 'start'.

Improve grammar of some bits.

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <div class="nodrag mb5 mb0-l c6 pr4-l hf-l oya-l">
       <h2 class="mb3 f5">Guide</h2>
 
-      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity and end the log whenever you feel like stopping.</p>
+      <p class="mb4">The Log is designed for single-tasking. When you start a log, focus on your activity and stop at any time.</p>
 
       <h3 class="mb3 f5">Console</h3>
       <p class="mb4 m">Use the console to enter commands. The console is summoned when you start typing. Here are a list of available commands:</p>
@@ -488,18 +488,18 @@
 
       <p class="mb4 m">A <b>Sector</b> defines an activity type. A <b>Project</b> can involve one or more Sectors. For example, let's say you're working on an app project. This project may involve Design, Code, and Research sectors.</p>
 
-      <p class="mb3 m">To end a log:</p>
+      <p class="mb3 m">To stop logging:</p>
       <div class="mb4 bl pl3 m">
-        <p>end</p>
+        <p>stop</p>
       </div>
 
-      <p class="mb3 m">If you want to take a break, temporarily end a log, and resume later:</p>
+      <p class="mb3 m">If you want pause logging temporarily, and resume logging from where you left off previously:</p>
       <div class="mb4 bl pl3 m">
-        <p>pause <span class="o8">// ends your log session</span></p>
+        <p>pause <span class="o8">// stops your current log session</span></p>
         <p>resume <span class="o8">// resumes the last log session</span></p>
       </div>
 
-      <p class="mb3 m">To edit an entry, use its ID (shown in Entries):</p>
+      <p class="mb3 m">To edit a log entry, use its ID (shown in Entries):</p>
       <div class="mb4 bl pl3 m">
         <p class="mb2">edit 12 sector "Code" <span class="o8">// edits entry #12</span></p>
         <p class="mb2">edit 25 project "Fishing"</p>
@@ -509,7 +509,7 @@
         <p>edit 5 end "2018 10 9 12 15 0"</p>
       </div>
 
-      <p class="mb3 m">To delete an entry, use its ID:</p>
+      <p class="mb3 m">To delete a log entry, use its ID:</p>
       <div class="mb4 bl pl3 m">
         <p>delete 15 <span class="o8">// deletes entry #15</span></p>
       </div>
