--- a/index.html
+++ b/index.html
@@ -91,35 +91,35 @@
 
       <ul class="lsn f6 lhc r">
         <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="LHT">0.00</span> h</p>
+          <p id="LHT" class="f3 mb1 fwb">0.00 h</p>
           <p class="o9">Logged Hours</p>
         </li>
         <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="LSN">0.00</span> h</p>
+          <p id="LSN" class="f3 mb1 fwb">0.00 h</p>
           <p class="o9">Min Session</p>
         </li>
         <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="LSX">0.00</span> h</p>
+          <p id="LSX" class="f3 mb1 fwb">0.00 h</p>
           <p class="o9">Max Session</p>
         </li>
         <li class="mb4 c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="ASDT">0.00</span> h</p>
+          <p id="ASDT" class="f3 mb1 fwb">0.00 h</p>
           <p class="o9">Avg Session</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="LPT">0.00</span>%</p>
+          <p id="LPT" class="f3 mb1 fwb">0.00%</p>
           <p class="o9">Log Percentage</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="focusToday" class="f3 mb1 fwb">0.00</p>
+          <p id="FOC" class="f3 mb1 fwb">0.00</p>
           <p class="o9">Focus</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="entryCount" class="f3 mb1 fwb">0</p>
+          <p id="ENC" class="f3 mb1 fwb">0</p>
           <p class="o9">Entries</p>
         </li>
         <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p class="f3 mb1 fwb"><span id="streakToday">0.00</span> d</p>
+          <p id="STK" class="f3 mb1 fwb">0 d</p>
           <p class="o9">Streak</p>
         </li>
       </ul>
@@ -236,57 +236,57 @@
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
-              <p id="secLHH" class="f3 mb1 fwb">0.00 h</p>
+              <p id="sLHH" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Logged Hours</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="secLSNH" class="f3 mb1 fwb">0.00 h</p>
+              <p id="sLSNH" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Min Session</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="secLSXH" class="f3 mb1 fwb">0.00 h</p>
+              <p id="sLSXH" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Max Session</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="secASD" class="f3 mb1 fwb">0.00 h</p>
+              <p id="sASD" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Avg Session</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="secEnt" class="f3 mb1 fwb">0</p>
+              <p id="sEnt" class="f3 mb1 fwb">0</p>
               <p class="o9">Entries</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="secStreak" class="f3 mb1 fwb">0 d</p>
+              <p id="sStreak" class="f3 mb1 fwb">0 d</p>
               <p class="o9">Streak</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="secPHH" class="f3 mb1 fwb">&mdash;</p>
+              <p id="sPHH" class="f3 mb1 fwb">0:00</p>
               <p class="o9">Peak Hour</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="secPDH" class="f3 mb1 fwb">&mdash;</p>
+              <p id="sPDH" class="f3 mb1 fwb">-</p>
               <p class="o9">Peak Day</p>
             </li>
           </ul>
 
           <h3 class="mb4 f6 fwn">Peaks</h3>
-          <div id="secPeakTimes" class="dib mb3 mb5-l pr3-l lf h2 w5"></div>
-          <div id="secPeakDays" class="dib mb5 pl3-l lf h2 w5"></div>
+          <div id="sPeakTimes" class="dib mb3 mb5-l pr3-l lf h2 w5"></div>
+          <div id="sPeakDays" class="dib mb5 pl3-l lf h2 w5"></div>
 
           <h3 class="mb4 f6 fwn">Focus</h3>
-          <div id="secFocusChart" class="mb4 wf h1"></div>
+          <div id="sFocusChart" class="mb4 wf h1"></div>
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="c6 c3-m c3-l">
-              <p id="secAFH" class="f3 mb1 fwb">0.00</p>
+              <p id="sAFH" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Avg Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
-              <p id="secFmin" class="f3 mb1 fwb">0.00</p>
+              <p id="sFmin" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Min Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
-              <p id="secFmax" class="f3 mb1 fwb">0.00</p>
+              <p id="sFmax" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Max Focus</p>
             </li>
           </ul>
@@ -311,57 +311,57 @@
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="mb4 c6 c3-m c3-l">
-              <p id="proLHH" class="f3 mb1 fwb">0.00 h</p>
+              <p id="pLHH" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Logged Hours</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="proLSNH" class="f3 mb1 fwb">0.00h</p>
+              <p id="pLSNH" class="f3 mb1 fwb">0.00h</p>
               <p class="o9">Min Session</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="proLSXH" class="f3 mb1 fwb">0.00 h</p>
+              <p id="pLSXH" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Max Session</p>
             </li>
             <li class="mb4 c6 c3-m c3-l">
-              <p id="proASD" class="f3 mb1 fwb">0.00 h</p>
+              <p id="pASD" class="f3 mb1 fwb">0.00 h</p>
               <p class="o9">Avg Session</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="proEnt" class="f3 mb1 fwb">0</p>
+              <p id="pEnt" class="f3 mb1 fwb">0</p>
               <p class="o9">Entries</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="proStreak" class="f3 mb1 fwb">0 d</p>
+              <p id="pStreak" class="f3 mb1 fwb">0 d</p>
               <p class="o9">Streak</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="proPHH" class="f3 mb1 fwb">0:00</p>
+              <p id="pPHH" class="f3 mb1 fwb">0:00</p>
               <p class="o9">Peak Hour</p>
             </li>
             <li class="mb4 mb0-l c6 c3-m c3-l">
-              <p id="proPDH" class="f3 mb1 fwb">-</p>
+              <p id="pPDH" class="f3 mb1 fwb">-</p>
               <p class="o9">Peak Day</p>
             </li>
           </ul>
 
           <h3 class="mb4 f6 fwn">Peaks</h3>
-          <div id="proPeakTimes" class="dib mb3 mb5-l pr3-l lf h2 w5"></div>
-          <div id="proPeakDays" class="dib mb5 pl3-l lf h2 w5"></div>
+          <div id="pPeakTimes" class="dib mb3 mb5-l pr3-l lf h2 w5"></div>
+          <div id="pPeakDays" class="dib mb5 pl3-l lf h2 w5"></div>
 
           <h3 class="mb4 f6 fwn">Focus</h3>
-          <div id="proFocusChart" class="mb4 wf h1"></div>
+          <div id="pFocusChart" class="mb4 wf h1"></div>
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="c6 c3-m c3-l">
-              <p id="proAFH" class="f3 mb1 fwb">0.00</p>
+              <p id="pAFH" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Avg Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
-              <p id="proFmin" class="f3 mb1 fwb">0.00</p>
+              <p id="pFmin" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Min Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
-              <p id="proFmax" class="f3 mb1 fwb">0.00</p>
+              <p id="pFmax" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Max Focus</p>
             </li>
           </ul>
@@ -439,31 +439,29 @@
       <div class="r h7">
 
         <div class="c8 pr4-l hf oya">
-          <ul id="morningEntries" class="mb3 lsn"></ul>
-          <ul id="afternoonEntries" class="mb3 lsn"></ul>
-          <ul id="eveningEntries" class="lsn"></ul>
+          <ul id="journalEntries" class="lsn"></ul>
         </div>
 
         <div class="c4 pl4-l">
           <ul class="lsn f6 lhc r">
             <li class="mb4 c6">
-              <p id="jLHT" class="f3 mb1 fwb">0.00 h</p>
+              <p class="f3 mb1 fwb"><span id="jLHT">0.00</span> h</p>
               <p class="o9">Logged Hours</p>
             </li>
             <li class="mb4 c6">
-              <p id="jLSN" class="f3 mb1 fwb">0.00 h</p>
+              <p class="f3 mb1 fwb"><span id="jLSN">0.00</span> h</p>
               <p class="o9">Min Session</p>
             </li>
             <li class="mb4 c6">
-              <p id="jLSX" class="f3 mb1 fwb">0.00 h</p>
+              <p class="f3 mb1 fwb"><span id="jLSX">0.00</span> h</p>
               <p class="o9">Max Session</p>
             </li>
             <li class="mb4 c6">
-              <p id="jASDT" class="f3 mb1 fwb">0.00 h</p>
+              <p class="f3 mb1 fwb"><span id="jASDT">0.00</span> h</p>
               <p class="o9">Avg Session</p>
             </li>
             <li class="mb4 mb0-l c6">
-              <p id="jLPT" class="f3 mb1 fwb">0.00%</p>
+              <p class="f3 mb1 fwb"><span id="jLPT">0.00</span>%</p>
               <p class="o9">Log Percentage</p>
             </li>
             <li class="mb4 mb0-l c6">
