--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <script src="utils/monocal.min.js"></script>
   <script src="utils/desamber.js"></script>
 </head>
-<body id="app" class="noselect r p4 p5-m p5-l hf cn c-d">
+<body id="app" class="noselect r p4 p4-m p5-l hf cn c-d">
 
   <header class="mb4 f6 lhc">
-    <h1 class="dib mr4 f5 upc tk">Log 1.0.2</h1>
+    <h1 class="dib mr4 f5 upc tk">Log <span id="version"></span></h1>
 
     <button id="b-ovw" class="pv1 tab on bg-cl of mr3" onclick="Log.tab('ovw', 'sect', 'tab')">Overview</button>
     <button id="b-lis" class="pv1 tab on bg-cl o5 mr3" onclick="Log.tab('lis', 'sect', 'tab')">Details</button>
@@ -27,108 +27,119 @@
   </header>
 
   <div id="ovw" class="sect h9">
-    <div class="c2 mb4">
-      <h3 class="mb4 f6 fwn">Peaks</h3>
 
-      <div id="phc" class="mb4 sh5 wf"></div>
-      <div id="pdc" class="mb4 sh5 wf"></div>
-
-      <h3 class="mb3 f6 fwn">Forecast</h3>
-
-      <div class="f6 r">
-        <p class="mb1 c3 c3-m cc-l">
-          <span class="mr2 o9 tk">SF</span>
-          <span id="fsf">&mdash;</span>
-        </p>
-        <p class="mb1 c3 c3-m cc-l">
-          <span class="mr2 o9 tk">PF</span>
-          <span id="fpf">&mdash;</span>
-        </p>
-        <p class="mb1 c3 c3-m cc-l">
-          <span class="mr2 o9 tk">LH</span>
-          <span id="flh">0.00 h</span>
-        </p>
-        <p class="c3 c3-m cc-l">
-          <span class="mr2 o9 tk">SD</span>
-          <span id="fsd">0.00 h</span>
-        </p>
+    <div class="h1">
+      <div class="mb3 psr wf sh2 bl br">
+        <div class="psa h5 br o5" style="left: 4.17%"></div>
+        <div class="psa hf br o7" style="left: 8.33%"></div>
+        <div class="psa h5 br o5" style="left:12.50%"></div>
+        <div class="psa hf br o7" style="left:16.67%"></div>
+        <div class="psa h5 br o5" style="left:20.83%"></div>
+        <div class="psa hf br o7" style="left:25.00%"></div>
+        <div class="psa h5 br o5" style="left:29.17%"></div>
+        <div class="psa hf br o7" style="left:33.33%"></div>
+        <div class="psa h5 br o5" style="left:37.50%"></div>
+        <div class="psa hf br o7" style="left:41.67%"></div>
+        <div class="psa h5 br o5" style="left:45.83%"></div>
+        <div class="psa hf br o7" style="left:50.00%"></div>
+        <div class="psa h5 br o5" style="left:54.17%"></div>
+        <div class="psa hf br o7" style="left:58.33%"></div>
+        <div class="psa h5 br o5" style="left:62.50%"></div>
+        <div class="psa hf br o7" style="left:66.67%"></div>
+        <div class="psa h5 br o5" style="left:70.83%"></div>
+        <div class="psa hf br o7" style="left:75.00%"></div>
+        <div class="psa h5 br o5" style="left:79.17%"></div>
+        <div class="psa hf br o7" style="left:83.33%"></div>
+        <div class="psa h5 br o5" style="left:87.50%"></div>
+        <div class="psa hf br o7" style="left:91.67%"></div>
+        <div class="psa h5 br o5" style="left:95.83%"></div>
       </div>
-    </div>
-    <div class="c8 ph4-l hf-l oya-l">
-      <h3 class="mb4 f6 fwn">Overview</h3>
 
-      <div class="ph1">
-        <div class="mb3 psr wf sh2 bl br">
-          <div class="psa sh1 br o5" style="left:4.17%"></div>
-          <div class="psa hf br o7" style="left:8.33%"></div>
-          <div class="psa sh1 br o5" style="left:12.5%"></div>
-          <div class="psa hf br o7" style="left:16.67%"></div>
-          <div class="psa sh1 br o5" style="left:20.83%"></div>
-          <div class="psa hf br o7" style="left:25%"></div>
-          <div class="psa sh1 br o5" style="left:29.17%"></div>
-          <div class="psa hf br o7" style="left:33.33%"></div>
-          <div class="psa sh1 br o5" style="left:37.5%"></div>
-          <div class="psa hf br o7" style="left:41.67%"></div>
-          <div class="psa sh1 br o5" style="left:45.83%"></div>
-          <div class="psa hf br o7" style="left:50%"></div>
-          <div class="psa sh1 br o5" style="left:54.17%"></div>
-          <div class="psa hf br o7" style="left:58.33%"></div>
-          <div class="psa sh1 br o5" style="left:62.5%"></div>
-          <div class="psa hf br o7" style="left:66.67%"></div>
-          <div class="psa sh1 br o5" style="left:70.83%"></div>
-          <div class="psa hf br o7" style="left:75%"></div>
-          <div class="psa sh1 br o5" style="left:79.17%"></div>
-          <div class="psa hf br o7" style="left:83.33%"></div>
-          <div class="psa sh1 br o5" style="left:87.5%"></div>
-          <div class="psa hf br o7" style="left:91.67%"></div>
-          <div class="psa sh1 br o5" style="left:95.83%"></div>
+      <div id="dayChart" class="mb3 psr wf sh2"></div>
+    </div>
+
+    <div class="h9 r">
+      <div class="c2 mb4">
+        <h3 class="mb4 f6 fwn">Peaks</h3>
+
+        <div id="phc" class="mb4 sh5 wf"></div>
+        <div id="pdc" class="mb3 sh5 wf"></div>
+
+        <h3 class="mb3 f6 fwn">Forecast</h3>
+
+        <div class="f6 r">
+          <p class="mb1 c3 c3-m cc-l">
+            <span class="mr2 o9 tk">SF</span>
+            <span id="fsf">&mdash;</span>
+          </p>
+          <p class="mb1 c3 c3-m cc-l">
+            <span class="mr2 o9 tk">PF</span>
+            <span id="fpf">&mdash;</span>
+          </p>
+          <p class="mb1 c3 c3-m cc-l">
+            <span class="mr2 o9 tk">LH</span>
+            <span id="flh">0.00 h</span>
+          </p>
+          <p class="c3 c3-m cc-l">
+            <span class="mr2 o9 tk">SD</span>
+            <span id="fsd">0.00 h</span>
+          </p>
+        </div>
+      </div>
+      <div class="c8 ph4-l hf-l oya-l">
+        <h3 class="mb3 f6 fwn">Overview</h3>
+
+        <div id="weekChart" class="psr h5 mb4 bb bt">
+          <div class="psa wf c-3 bt o2" style="bottom:100%"></div>
+          <div class="psa wf c-3 bt o2" style="bottom:75%"></div>
+          <div class="psa wf c-3 bt o2" style="bottom:50%"></div>
+          <div class="psa wf c-3 bt o2" style="bottom:25%"></div>
+          <div class="psa wf c-3 bt o2" style="bottom:0%"></div>
         </div>
 
-        <div id="dayChart" class="mb3 psr wf sh2"></div>
+        <!-- <h3 class="mb4 f6 fwn">Today</h3> -->
+
+        <ul class="lsn f6 lhc r">
+          <li class="mb4 c6 c3-m c3-l">
+            <p id="LHT" class="f3 mb1 fwb">0.00 h</p>
+            <p class="o9">Logged Hours</p>
+          </li>
+          <li class="mb4 c6 c3-m c3-l">
+            <p id="LSN" class="f3 mb1 fwb">0.00 h</p>
+            <p class="o9">Min Session</p>
+          </li>
+          <li class="mb4 c6 c3-m c3-l">
+            <p id="LSX" class="f3 mb1 fwb">0.00 h</p>
+            <p class="o9">Max Session</p>
+          </li>
+          <li class="mb4 c6 c3-m c3-l">
+            <p id="ASDT" class="f3 mb1 fwb">0.00 h</p>
+            <p class="o9">Avg Session</p>
+          </li>
+          <li class="mb4 mb0-l c6 c3-m c3-l">
+            <p id="LPT" class="f3 mb1 fwb">0.00%</p>
+            <p class="o9">Log Percentage</p>
+          </li>
+          <li class="mb4 mb0-l c6 c3-m c3-l">
+            <p id="FOC" class="f3 mb1 fwb">0.00</p>
+            <p class="o9">Focus</p>
+          </li>
+          <li class="mb4 mb0-l c6 c3-m c3-l">
+            <p id="ENC" class="f3 mb1 fwb">0</p>
+            <p class="o9">Entries</p>
+          </li>
+          <li class="mb4 mb0-l c6 c3-m c3-l">
+            <p id="STK" class="f3 mb1 fwb">0 d</p>
+            <p class="o9">Streak</p>
+          </li>
+        </ul>
       </div>
-
-      <div id="weekChart" class="nodrag h4 mb4"></div>
-
-      <ul class="lsn f6 lhc r">
-        <li class="mb4 c6 c3-m c3-l">
-          <p id="LHT" class="f3 mb1 fwb">0.00 h</p>
-          <p class="o9">Logged Hours</p>
-        </li>
-        <li class="mb4 c6 c3-m c3-l">
-          <p id="LSN" class="f3 mb1 fwb">0.00 h</p>
-          <p class="o9">Min Session</p>
-        </li>
-        <li class="mb4 c6 c3-m c3-l">
-          <p id="LSX" class="f3 mb1 fwb">0.00 h</p>
-          <p class="o9">Max Session</p>
-        </li>
-        <li class="mb4 c6 c3-m c3-l">
-          <p id="ASDT" class="f3 mb1 fwb">0.00 h</p>
-          <p class="o9">Avg Session</p>
-        </li>
-        <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="LPT" class="f3 mb1 fwb">0.00%</p>
-          <p class="o9">Log Percentage</p>
-        </li>
-        <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="FOC" class="f3 mb1 fwb">0.00</p>
-          <p class="o9">Focus</p>
-        </li>
-        <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="ENC" class="f3 mb1 fwb">0</p>
-          <p class="o9">Entries</p>
-        </li>
-        <li class="mb4 mb0-l c6 c3-m c3-l">
-          <p id="STK" class="f3 mb1 fwb">0 d</p>
-          <p class="o9">Streak</p>
-        </li>
-      </ul>
-    </div>
-    <div class="c2 hf-l f6">
-      <h3 class="mb3 f5 fwn">Sectors</h3>
-      <ul id="sectorBars" class="nodrag lsn lhc mb4 h4-l oya-l"></ul>
-      <h3 class="mb3 f5 fwn">Projects</h3>
-      <ul id="projectBars" class="nodrag lsn lhc h4-l oya-l"></ul>
+      <div class="c2 hf-l f6">
+        <h3 class="mb3 f5 fwn">Sectors</h3>
+        <ul id="sectorBars" class="nodrag lsn lhc mb3 h4-l oya-l"></ul>
+        <h3 class="mb3 f5 fwn">Projects</h3>
+        <ul id="projectBars" class="nodrag lsn lhc h4-l oya-l"></ul>
+      </div>
     </div>
   </div>
 
@@ -141,7 +152,11 @@
 
     <div class="cb pl4-l hf-l">
       <div id="sum" class="nodrag subsect hf oya">
-        <h3 class="mb4 f6 fwn">Statistics</h3>
+        <!-- <h3 class="mb4 f6 fwn">Statistics</h3> -->
+
+        <h3 class="mb4 f6 fwn">Peaks</h3>
+        <div id="peakTimesHistory" class="dib mb3 mb4-l pr3-l lf h3 w5"></div>
+        <div id="peakDaysHistory" class="dib mb5 pl3-l lf h3 w5"></div>
 
         <ul class="mb5 lsn f6 lhc r">
           <li class="mb4 c6 c3-m c3-l">
@@ -176,38 +191,28 @@
             <p id="secCount" class="f3 mb1 fwb">0</p>
             <p class="o9">Sectors</p>
           </li>
-          <li class="mb4 c6 c3-m c3-l">
+          <li class="mb4 mb0-l c6 c3-m c3-l">
             <p id="proCount" class="f3 mb1 fwb">0</p>
             <p class="o9">Projects</p>
           </li>
-          <li class="mb4 c6 c3-m c3-l">
+          <li class="mb4 mb0-l c6 c3-m c3-l">
             <p id="PHH" class="f3 mb1 fwb">0:00</p>
             <p class="o9">Peak Hour</p>
           </li>
-          <li class="mb4 c6 c3-m c3-l">
+          <li class="mb4 mb0-l c6 c3-m c3-l">
             <p id="PDH" class="f3 mb1 fwb">0.00</p>
             <p class="o9">Peak Day</p>
           </li>
-          <li class="mb4 c6 c3-m c3-l">
-            <p id="efec" class="f3 mb1 fwb">0</p>
-            <p class="o9">Effectiveness</p>
-          </li>
-          <li class="mb4 mb0-l c6 c3-m c3-l">
-            <p id="efic" class="f3 mb1 fwb">0</p>
-            <p class="o9">Efficiency</p>
-          </li>
         </ul>
 
-        <h3 class="mb4 f6 fwn">Peaks</h3>
-        <div id="peakTimesHistory" class="dib mb3 mb4-l pr3-l lf h2 w5"></div>
-        <div id="peakDaysHistory" class="dib mb5 pl3-l lf h2 w5"></div>
+
 
         <h3 class="mb4 f6 fwn">Focus</h3>
         <div id="focusChart" class="mb4 wf sh5"></div>
 
         <ul class="mb5 lsn f6 lhc r">
           <li class="c6 c3-m c3-l">
-            <p id="AFH" class="f3 mb1 fwb">0.00</p>
+            <p id="Favg" class="f3 mb1 fwb">0.00</p>
             <p class="o9">Avg Focus</p>
           </li>
           <li class="c6 c3-m c3-l">
@@ -278,7 +283,7 @@
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="c6 c3-m c3-l">
-              <p id="sAFH" class="f3 mb1 fwb">0.00</p>
+              <p id="sFavg" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Avg Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
@@ -353,7 +358,7 @@
 
           <ul class="mb5 lsn f6 lhc r">
             <li class="c6 c3-m c3-l">
-              <p id="pAFH" class="f3 mb1 fwb">0.00</p>
+              <p id="pFavg" class="f3 mb1 fwb">0.00</p>
               <p class="o9">Avg Focus</p>
             </li>
             <li class="c6 c3-m c3-l">
@@ -378,7 +383,34 @@
     </div>
   </div>
 
-  <div id="vis" class="nodrag dn sect h9 oya"></div>
+  <div id="vis" class="nodrag dn sect h9 oya">
+    <div class="psr wf sh2 bl br">
+      <div class="psa h5 br o5" style="left: 4.17%"></div>
+      <div class="psa hf br o7" style="left: 8.33%"></div>
+      <div class="psa h5 br o5" style="left:12.50%"></div>
+      <div class="psa hf br o7" style="left:16.67%"></div>
+      <div class="psa h5 br o5" style="left:20.83%"></div>
+      <div class="psa hf br o7" style="left:25.00%"></div>
+      <div class="psa h5 br o5" style="left:29.17%"></div>
+      <div class="psa hf br o7" style="left:33.33%"></div>
+      <div class="psa h5 br o5" style="left:37.50%"></div>
+      <div class="psa hf br o7" style="left:41.67%"></div>
+      <div class="psa h5 br o5" style="left:45.83%"></div>
+      <div class="psa hf br o7" style="left:50.00%"></div>
+      <div class="psa h5 br o5" style="left:54.17%"></div>
+      <div class="psa hf br o7" style="left:58.33%"></div>
+      <div class="psa h5 br o5" style="left:62.50%"></div>
+      <div class="psa hf br o7" style="left:66.67%"></div>
+      <div class="psa h5 br o5" style="left:70.83%"></div>
+      <div class="psa hf br o7" style="left:75.00%"></div>
+      <div class="psa h5 br o5" style="left:79.17%"></div>
+      <div class="psa hf br o7" style="left:83.33%"></div>
+      <div class="psa h5 br o5" style="left:87.50%"></div>
+      <div class="psa hf br o7" style="left:91.67%"></div>
+      <div class="psa h5 br o5" style="left:95.83%"></div>
+    </div>
+    <div id="visual" class="nodrag mt4 h9 oya"></div>
+  </div>
 
   <div id="tab" class="dn sect wf h9 oya">
     <table class="wf bn">
@@ -391,7 +423,7 @@
           <th>Duration</th>
           <th>Sector</th>
           <th>Project</th>
-          <th>Activity</th>
+          <th>Description</th>
         </tr>
       </thead>
       <tbody id="logbook" class="nodrag f6"></tbody>
@@ -408,29 +440,29 @@
 
       <div class="mb4 ph1">
         <div class="mb3 psr wf sh2 bl br">
-          <div class="psa sh1 br o5" style="left:4.17%"></div>
-          <div class="psa hf br o7" style="left:8.33%"></div>
-          <div class="psa sh1 br o5" style="left:12.5%"></div>
+          <div class="psa h5 br o5" style="left: 4.17%"></div>
+          <div class="psa hf br o7" style="left: 8.33%"></div>
+          <div class="psa h5 br o5" style="left:12.50%"></div>
           <div class="psa hf br o7" style="left:16.67%"></div>
-          <div class="psa sh1 br o5" style="left:20.83%"></div>
-          <div class="psa hf br o7" style="left:25%"></div>
-          <div class="psa sh1 br o5" style="left:29.17%"></div>
+          <div class="psa h5 br o5" style="left:20.83%"></div>
+          <div class="psa hf br o7" style="left:25.00%"></div>
+          <div class="psa h5 br o5" style="left:29.17%"></div>
           <div class="psa hf br o7" style="left:33.33%"></div>
-          <div class="psa sh1 br o5" style="left:37.5%"></div>
+          <div class="psa h5 br o5" style="left:37.50%"></div>
           <div class="psa hf br o7" style="left:41.67%"></div>
-          <div class="psa sh1 br o5" style="left:45.83%"></div>
-          <div class="psa hf br o7" style="left:50%"></div>
-          <div class="psa sh1 br o5" style="left:54.17%"></div>
+          <div class="psa h5 br o5" style="left:45.83%"></div>
+          <div class="psa hf br o7" style="left:50.00%"></div>
+          <div class="psa h5 br o5" style="left:54.17%"></div>
           <div class="psa hf br o7" style="left:58.33%"></div>
-          <div class="psa sh1 br o5" style="left:62.5%"></div>
+          <div class="psa h5 br o5" style="left:62.50%"></div>
           <div class="psa hf br o7" style="left:66.67%"></div>
-          <div class="psa sh1 br o5" style="left:70.83%"></div>
-          <div class="psa hf br o7" style="left:75%"></div>
-          <div class="psa sh1 br o5" style="left:79.17%"></div>
+          <div class="psa h5 br o5" style="left:70.83%"></div>
+          <div class="psa hf br o7" style="left:75.00%"></div>
+          <div class="psa h5 br o5" style="left:79.17%"></div>
           <div class="psa hf br o7" style="left:83.33%"></div>
-          <div class="psa sh1 br o5" style="left:87.5%"></div>
+          <div class="psa h5 br o5" style="left:87.50%"></div>
           <div class="psa hf br o7" style="left:91.67%"></div>
-          <div class="psa sh1 br o5" style="left:95.83%"></div>
+          <div class="psa h5 br o5" style="left:95.83%"></div>
         </div>
 
         <div id="journalDay" class="mb3 psr wf sh2"></div>
@@ -605,15 +637,16 @@
     <input id="console" type="text" class="wf bg-0 blanc on bn p3" autofocus="autofocus" placeholder="Log.console" />
   </form>
 
-  <!-- <script src="data/user.js"></script> -->
+  <script src="js/utils.js"></script>
   <script src="js/drop.js"></script>
   <script src="js/log.js"></script>
-  <script src="js/ui.js"></script>
   <script src="js/options.js"></script>
   <script src="js/console.js"></script>
   <script src="js/vis.js"></script>
   <script src="js/time.js"></script>
   <script src="js/data.js"></script>
+
+  <script src="js/test.js"></script>
 
   <script>
     const {dialog,app} = require('electron').remote
@@ -621,6 +654,9 @@
     const ipcRenderer = require('electron').ipcRenderer
     const Store = require('./js/store.js')
     const path = require('path')
+    const timer = require('headless-work-timer')
+
+    write('version', app.getVersion())
 
     let dataPath = ''
 
